chore(project): adding fish and vim feature to the devcontainer

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,7 +8,9 @@
         }
     },
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:1": {}
+        "ghcr.io/devcontainers/features/docker-in-docker:1": {},
+        "ghcr.io/guiyomh/features/fish": {},
+        "ghcr.io/guiyomh/features/vim": {}
     },
     "postCreateCommand": "npm install -g @devcontainers/cli"
 }
