--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -48,7 +48,10 @@ jobs:
           - mcr.microsoft.com/devcontainers/base:ubuntu
           - mcr.microsoft.com/devcontainers/base:debian
           - mcr.microsoft.com/devcontainers/base:alpine
-          - mcr.microsoft.com/devcontainers/go:latest
+          - alpine:latest
+          - debian:stable-slim
+          - ubuntu:focal
+          - ubuntu:jammy
     steps:
       - uses: actions/checkout@v3
 
@@ -94,7 +97,10 @@ jobs:
           - mcr.microsoft.com/devcontainers/base:ubuntu
           - mcr.microsoft.com/devcontainers/base:debian
           - mcr.microsoft.com/devcontainers/base:alpine
-          - mcr.microsoft.com/devcontainers/go:latest
+          - alpine:latest
+          - debian:stable-slim
+          - ubuntu:focal
+          - ubuntu:jammy
     steps:
       - uses: actions/checkout@v3
 
