chore(devcontainer): add vscode errorlens plugins

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -12,7 +12,8 @@
                 "timonwong.shellcheck",
                 "eamodio.gitlens",
                 "mhutchie.git-graph",
-                "kokakiwi.vscode-just"
+                "kokakiwi.vscode-just",
+                "usernamehw.errorlens"
             ]
         }
     },
