--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -28,6 +28,7 @@ jobs:
         id: filter
         with:
           filters: |
+            asdf: ./**/asdf/**
             dagger-cue: ./**/dagger-cue/**
             golangci-lint: ./**/golangci-lint/**
             gomarkdoc: ./**/gomarkdoc/**
@@ -87,6 +88,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - asdf
           - dagger-cue
           - golangci-lint
           - gomarkdoc
@@ -119,6 +121,7 @@ jobs:
     strategy:
       matrix:
         features:
+          - asdf
           - dagger-cue
           - golangci-lint
           - gomarkdoc
