--- a/src/gomarkdoc/devcontainer-feature.json
+++ b/src/gomarkdoc/devcontainer-feature.json
@@ -1,22 +1,22 @@
 {
-    "id": "gomarkdoc",
-    "version": "0.1.0",
-    "name": "gomarkdoc",
-    "description":" formats documentation for one or more packages as markdown.",
-    "options": {
-        "version": {
-            "type": "string",
-            "proposals": [
-                "latest",
-                "0.4.1",
-                "0.4.0",
-                "0.3.2"
-            ],
-            "default": "latest",
-            "description": "Select or enter a gomarkdoc version to install"
-        }
-    },
-    "installAfter": [
-        "ghcr.io/devcontainers/features/go"
-    ]
+  "id": "gomarkdoc",
+  "version": "0.1.0",
+  "name": "gomarkdoc",
+  "description": " formats documentation for one or more packages as markdown.",
+  "options": {
+    "version": {
+      "type": "string",
+      "proposals": [
+        "latest",
+        "0.4.1",
+        "0.4.0",
+        "0.3.2"
+      ],
+      "default": "latest",
+      "description": "Select or enter a gomarkdoc version to install"
+    }
+  },
+  "installsAfter": [
+    "ghcr.io/devcontainers/features/go"
+  ]
 }
